# detaillogger

./: .gitignore  README.md  __init__.py  detaillogger.py  detaillogger.toml  pyproject.toml  setup.cfg  setup.py  test.py  test_detaillogger.py
DetailLogger.egg-info/: PKG-INFO  SOURCES.txt
PrintPop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
detaillogger/: __init__.py  core.py  detail_logger.py
detaillogger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
