[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["detaillogger"]

[project]
name = "detaillogger"
version = "0.1.6"
dependencies = []

requires-python = ">=3.8"
authors = [
  {name = "Ryan LaPine", email = "github.stunt845@passinbox.com"}
]
maintainers = [
  {name = "Ryan LaPine", email = "github.stunt845@passinbox.com"}
]
description = "DetailLogger is a lightweight Python utility for enhanced logging and exception data tracing."
readme = "README.md"
license = { text = "MIT" }
license-files = ["LICENCSE.*"]
keywords = [
  "logging",
  "logger",
  "structured logging",
  "console output",
  "debugging",
  "log formatting",
  "Python logging",
  "CLI tools",
  "developer tools",
  "diagnostics",
  "trace logs",
  "custom logger",
  "log levels",
  "terminal output",
  "verbose logging"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/rlapine/DetailLogger"
Repository = "https://github.com/rlapine/DetailLogger"
Documentation = "https://github.com/rlapine/DetailLogger/README.md"

[project.scripts]
detaillogger = "detaillogger.core:main"












[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DetailLogger"
version = "0.1.6"
description = "Styled console printing made simple — color, format, and clarity in one package."
readme = "README.md"
authors = [{ name="Ryan LaPine", email="github.stunt845@passinbox.com" }]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [] 

[tool.setuptools]
packages = ["detaillogger"]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://github.com/rlapine/DetailLogger"
Repository = "https://github.com/rlapine/DetailLogger"
Documentation = "https://github.com/rlapine/DetailLogger/README.md"

[project.scripts]
detaillogger = "detaillogger.core:main"

[project.classifiers]
# Full list: https://pypi.org/classifiers/
"Programming Language :: Python :: 3"
"License :: OSI Approved :: MIT License"
"Operating System :: OS Independent"
"Intended Audience :: Developers"
"Topic :: Software Development :: Libraries"
"Topic :: Utilities"